componentY section collapsing bottom- to fix

--- a/booksapp/src/modules/Component.module.css
+++ b/booksapp/src/modules/Component.module.css
@@ -1,8 +1,3 @@
 .component {
-    
-    
-    background-color: grey;
-    height: 85vh;
-    float: left;
 
 }
